--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="#420" content="Real Men Do Care">
+    <meta name="#420,lip balm, Weed, Legal weed" content="Real Men Do Care">
     <meta name="author" content="#420">
       
       <!-- Global site tag (gtag.js) - Google Analytics -->
